Mini-Fix (Overflow)
- Fixed Overflowing Property
- More refactoring

--- a/assets/css/todo.css
+++ b/assets/css/todo.css
@@ -46,6 +46,7 @@ span#header {}
 
 ul {
   list-style: none;
+
   margin: 0;
   padding: 0;
 }
@@ -67,13 +68,16 @@ div div ul#categories {
 div div ul#categories li {
   text-transform: capitalize;
   padding-top: 10%;
+
 }
 
 div#container ul#list li {
   background: #fff;
   height: 40px;
+  overflow: hidden;
   line-height: 40px;
   color: #666;
+
 }
 
 div#container ul#list li:nth-child(2n) {
